# linux-embedded-simple-utility

./: .gitignore  CMakeLists.txt  main.cpp  toolchain-arm-linux.cmake
include/: BaseEvent.hpp  Button.hpp  DisplayScreen.hpp  LOG.hpp  SafeQueue.hpp  Signal.hpp  SysInfo.hpp  Texture.hpp  ThreadPool.hpp  Timer.hpp  TypeDef.hpp  Utils.hpp
src/: BaseEvent.cpp  Button.cpp  DisplayScreen.cpp  Signal.cpp  SysInfo.cpp  Texture.cpp  Timer.cpp  Utils.cpp
